# Proof-Of-Reserve-Starknet

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hardhat.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: test.yml
contracts/ethereum/: Keeper.sol  MockToken.sol  PublishDataL1.sol  errors.sol  keeper.sol  l1Aggregator.sol  l1_contract.sol  setter.sol
contracts/ethereum/interfaces/: IERC20.sol  IL1_Contract.sol  IPublishDataL1.sol  IStarknetMessaging.sol  IStarknetMessagingEvents.sol  Interface.sol
contracts/mainnet/: l1_contract.sol
contracts/starknet/: Library.cairo  ProofReserve.cairo  l2Aggregator.cairo  proof_of_reserve.cairo  proof_reserve.cairo  setter.cairo  signature_verification.cairo
starknet-artifacts/contracts/starknet/Library.cairo/: Library.json
starknet-artifacts/contracts/starknet/ProofReserve.cairo/: ProofReserve.json  ProofReserve_abi.json
test/: constants.ts  messaging.test.ts  publish-reserves.test.ts  publish_reserves.test.ts  quick.test.ts  setter.test.ts  starknet.test.ts  utils.ts  verify_signature.test.ts
