[tool.poetry]
name = "proofreserve-starknet"
version = "0.1.0"
description = ""
authors = ["Josue"]

[tool.poetry.dependencies]
python = "3.9.12"
cairo-lang = "0.10.0"
starknet-devnet = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
